2003-02-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* debug.cc (get_user_function): Use dynamic_cast, not static_cast.

	* ov-usr-fcn.cc (octave_user_function::traceback_error): Now const.

	* ov.cc (octave_value (const octave_fcn_handle&)): New constructor.
	(octave_value::fcn_handle_value): New virtual function.
	* ov-base.cc (octave_value::fcn_handle_value): Provide default.
	* ov-usr-fcn.cc (octave_user_function::stash_fcn_file_name): New
	arg, nm.  Change all callers.
	* ov-fcn.h (octave_function::is_nested_function): New virtual function.
	* parse.y (get_feval_args): New function.
	(feval (octave_function *, const octave_value_list&, int)): Likewise.
	(feval (const octave_value_list&, int)): Allow the first arg to be
	a function handle as well as a string.
	* variables.cc (load_function): New function.
	* pt-walk.h, pt-pr-code.h, pt-pr-code.cc, pt-check.h, pt-check.cc,
	pt-bp.h, pt-bp.cc: Handle new tree_fcn_handle class.
	* pt-all.h: Include pt-fcn-handle.h.
	* pt-fcn-handle.h, pt-fcn-handle.cc, ov-fcn-handle.h,
	ov-fcn-handle.cc: New files.

2003-02-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* parse.y (FCN_HANDLE): New token type.
	(fcn_handle): New non-terminal.
	(primary_expr): Also accept fcn_handle.
	(tree_fcn_handle_type): New %type.
	(union): New field, tree_fcn_handle_type.
	(make_fcn_handle): New function.

	* lex.l (@{IDENT}): Recognize function handle syntax.
	(@): Don't recognize "@" as a single token.

	* load-save.cc (struct hdf5_callback_data): Provide constructor.
	(hdf5_callback_data::name, hdf5_callback_data::doc): Now
	std::string instead of char*.  Change all uses.

2003-02-18  Roger Banks <rbanks@colsa.com>

	* load-save.cc (read_ascii_data, read_ascii_data,
	read_mat5_binary_element, save_mat5_binary_element,
	save_ascii_data): Handle cell arrays.
	(write_mat5_cell_array): New function.

2003-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (DLD_XSRC): Delete log.cc from the list.
	Add sqrtm.cc to the list.
